Added basic form to website

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 15 Front-End</title>
+    <title>Test</title>
 </head>
 <body>
-    Hello World
+    <form>
+        <textarea>Insert Query Here</textarea>
+        <input type="submit" value="Submit">
+    </form>
+    <table>
+        
+    </table>
 </body>
 </html>
