Started working on script to send API requests

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Test</title>
 </head>
 <body>
-    <form>
-        <textarea>Insert Query Here</textarea>
-        <input type="submit" value="Submit">
-    </form>
+    <script src="./index.js"></script>
+    <textarea id="query" style="display: block;">Insert Query Here</textarea>
+    <button id="submit">Submit</button>
     <table>
         
     </table>
