--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="./index.js"></script>
     <textarea id="query" style="display: block;">Insert Query Here</textarea>
     <button id="submit">Submit</button>
-    <table>
+    <table id="queryResult">
         
     </table>
 </body>
