It probably needs the built js files still though...

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Test</title>
 </head>
 <body>
-    <script src="./index.js"></script>
+    <script src="./build/index.js"></script>
     <fieldset> <!--Unused Right now-->
         <legend>Endpoint</legend>
-        
+
         <div>
             <input type="radio" id="queryBtn" value="query" name="endpoint" checked />
             <label for="queryBtn">Query</label>
