Can now query and fill out table with data

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
             </ul>
         </div>
     </div>
-    <div id="table"></div>
+    <div id="table">
+        <table id="result">
+            <thead>
+            </thead>
+            <tbody>
+
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
