Added a simple stylesheet to make the form look/work better

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSE 335 Project</title>
+    <link href="./styles.css" rel="stylesheet">
 </head>
 <body>
     <script type="module" src="./build/index.js"></script>
@@ -29,7 +30,6 @@
             <thead>
             </thead>
             <tbody>
-
             </tbody>
         </table>
     </div>
