--- a/index.html
+++ b/index.html
@@ -11,21 +11,16 @@
     <div id="container">
         <div id="sidebar">
             <h1>Views</h1>
+            <div class="view-folder">
+                <ul class="view-folder" id="view-preset-list">
+                </ul>
+            </div>
 
+            <h1>Operations</h1>
             <div class="view-folder">
-                <h2>Presets</h2>
-                <ul class="view-folder" id="preset-list">
+                <ul class="view-folder" id="ops-preset-list">
                 </ul>
             </div>
-            <!--
-            <div class="view-folder">
-                <h2>Custom</h2>
-                <ul class="view-folder">
-                    <li><span id="custom-query">Run Custom Query</span></li>
-                    <li><span id="new-view">+ Add New View</span></li>
-                </ul>
-            </div>
-            -->
         </div>
         <div id="table-container">
             <h1><span id="table-header"></span></h1>
