Made query for each view appear on the website

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
         <div id="table-container">
             <h1><span id="table-header"></span></h1>
+            <pre><code><span id="query-box"></span></code></pre>
             <table id="result">
                 <thead>
                 </thead>
