Added table selects

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
                 <ul class="view-folder" id="view-preset-list">
                 </ul>
             </div>
+            
+            <h1>Tables</h1>
+            <div class="view-folder">
+                <ul class="view-folder" id="table-list">
+                </ul>
+            </div>
 
             <h1>Operations</h1>
             <div class="view-folder">
