--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </div>
         <div id="table-container">
             <h1><span id="table-header"></span></h1>
+            <p><span id="view-description"></span></p>
             <pre><code><span id="query-box"></span></code></pre>
             <table id="result">
                 <thead>
